--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("http://www.ox.ac.uk/sites/files/oxford/styles/ow_medium_feature/public/field/field_image_main/wave.jpg?itok=XS6D8dpD");
+  background-image: url("https://www.ox.ac.uk/sites/files/oxford/styles/ow_medium_feature/public/field/field_image_main/wave.jpg?itok=XS6D8dpD");
   height: 100%;
 }
 
